fixed white space at bottom of page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,7 +24,7 @@
 }
 
 body {
-  min-height: 100rem;
+
 
   font-family: "Catamaran";
 }
